--- a/index.html
+++ b/index.html
@@ -33,20 +33,46 @@
 
     <h1>Exo 5</h1>
 
-    <p id="timeExo5"> </p>
-    <p id="pastTimeExo5"> </p>
+    <p id="timeExo5"> ... </p>
+    <p id="pastTimeExo5"> ... </p>
 
 
-    
+    <h1>Exo 6</h1>
+
+    <button id="buttonExo6" type="button"> Click me ! </button>
 
 
+    <h1>Exo 7</h1>
+
+    <table id="tableExo7" border="1">
+      <tr>
+        <td>Line 1</td>
+        <td>Line 1</td>
+      </tr>
+      <tr>
+        <td>Line 2</td>
+        <td>Line 2</td>
+      </tr>
+    </table>
+
+    <button id="buttonExo7" type="button">Add a line !</button>
+
+    <h1>Exo 8</h1>
 
 
+    <h1 id="exo9">Exo 9</h1>
+
+    <img id="img1" class="img123" src="#" alt="Image 1">
+    <img id="img2" class="img123" src="#" alt="Image 2">
+    <img id="img3" class="img123" src="#" alt="Image 3">
+
+    <p id="p9">Cliquez sur chacune des images !</p>
 
 
+    <h1>Exo 10 </h1>
 
-
-
+    <div id="divExo10">This is my div !</div>
+    <button id="buttonExo10">Click me !</button>
 
 
 
